Arrange hidden form

--- a/app/views/index/index.html.slim
+++ b/app/views/index/index.html.slim
@@ -10,10 +10,10 @@
     button.pause-button.waves-effect.waves-light.btn-large.u-mr_100.deep-orange.lighten-2[style="width: 200px"] Pause
     button.stop-button.waves-effect.waves-light.btn-large.red.lighten-1[style="width: 200px"] Stop
     
-    = form_tag attendance_records_path, id: 'attendance-record-form', method: :create do
-      = hidden_field_tag 'start_time', Time.now
-      = hidden_field_tag 'break_time', '0:00:00'
-      = hidden_field_tag 'end_time', ''
+    = form_tag attendance_records_new_path, id: 'attendance-record-form', method: :create do
+      = hidden_field_tag 'attendance_record[start_time]', Time.now
+      = hidden_field_tag 'attendance_record[break_time]', '0:00:00'
+      = hidden_field_tag 'attendance_record[end_time]', Time.now
     
 .container.u-pt_40
   h3 Records
