--- a/app/views/attendance_records/new.html.slim
+++ b/app/views/attendance_records/new.html.slim
@@ -1,7 +1,8 @@
 
 .container
-  h3 New attendance_record
+  h3.u-mt_50 New record
 
-  == render 'form'
+  .u-mt_50.u-mb_50
+    == render 'form'
 
-  = link_to 'Back', root_path, class: 'waves-effect waves-teal btn-flat'
+  = link_to 'Back', root_path, class: 'waves-effect waves-light btn deep-purple darken-1'
