--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,6 +123,11 @@
 .u-mr_100 { margin-right: 100px; }
 .u-ml_100 { margin-left: 100px; }
 
+.u-pt_0 { padding-top: 0px; }
+.u-pb_0 { padding-bottom: 0px; }
+.u-pl_0 { padding-left: 0px; }
+.u-pr_0 { padding-right: 0px; }
+
 .u-pt_5 { padding-top: 5px; }
 .u-pb_5 { padding-bottom: 5px; }
 .u-pl_5 { padding-left: 5px; }
