--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,4 +29,11 @@ html
     /     .card-panel.purple.lighten-3
     /       p = alert
     
-    = yield
+    main = yield
+    
+    footer.page-footer.u-pt_0
+      .footer-copyright
+        .container
+          span © 2017 Hiroaki KARASAWA
+          a.grey-text.text-lighten-4.right[href="https://github.com/siquare"] GitHub
+        
