--- a/app/views/attendance_records/_form.html.slim
+++ b/app/views/attendance_records/_form.html.slim
@@ -20,7 +20,7 @@
   
   .input-field
     = f.text_area :memo, default: @attendance_record.memo, class: 'materialize-textarea'
-    label Memo
+    label[class="#{@attendance_record.memo.present? ? 'active' : ''}"] Memo
   
   .input-field
-    = f.submit 'Create new record !', class: 'waves-effect waves-light btn'
+    = f.submit 'Submit', class: 'waves-effect waves-light btn'
