--- a/app/views/attendance_records/edit.html.slim
+++ b/app/views/attendance_records/edit.html.slim
@@ -1,5 +1,7 @@
-h1 Editing attendance_record
+.container
+  h3.u-mt_10 Edit record
 
-== render 'form'
+  .u-mt_50.u-mb_50
+    == render 'form'
 
-= link_to 'Back', root_path
+  = link_to 'Back', root_path,  class: 'waves-effect waves-light btn brown darken-1'
