--- a/app/views/attendance_records/new.html.slim
+++ b/app/views/attendance_records/new.html.slim
@@ -1,8 +1,7 @@
-
 .container
   h3.u-mt_50 New record
 
   .u-mt_50.u-mb_50
     == render 'form'
 
-  = link_to 'Back', root_path, class: 'waves-effect waves-light btn deep-purple darken-1'
+  = link_to 'Back', root_path, class: 'waves-effect waves-light btn brown darken-1'
