Tweak header link

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
   body
     nav.brown.darken-2
       .nav-wrapper
-        a.brand-logo.u-ml_50 href="#"  Kintai
+        a.brand-logo.u-ml_50 href="#{root_path}"  Kintai
         ul#nav-mobile.right.hide-on-med-and-down
           - if current_user
             li = current_user.email
