--- a/app/views/index/index.html.slim
+++ b/app/views/index/index.html.slim
@@ -24,6 +24,7 @@
         th Date
         th Work hours (Break time)
         th Total time
+        th Memo
         th Actions
     
     tbody
@@ -32,6 +33,7 @@
           td = attendance_record.start_time.strftime('%B %d, %Y')
           td = formatted_time_with_break_time(attendance_record)
           td = formatted_duration(attendance_record.end_time - attendance_record.start_time - attendance_record.break_time)
+          td = attendance_record.memo
           td
             = link_to 'Edit', edit_attendance_record_path(attendance_record), class: 'waves-effect waves-teal btn-flat'
             = link_to 'Delete', attendance_record_path(attendance_record), method: 'delete', class: 'waves-effect waves-teal btn-flat'
@@ -48,7 +50,7 @@
         label.active Hourly wage
         
       .input-field.col.m4
-        input#monthly-salary[type="text" value="#{total_working_time(@attendance_records) / 60 / 60 * current_user.hourly_wage}"]
+        input#monthly-salary[type="text" value="#{(total_working_time(@attendance_records) / 60 / 60 * current_user.hourly_wage).to_i}"]
         label.active Monthly salary (calculated automatically)
   - else
     p Nothing to show
