Show flash messages

--- a/app/views/index/index.html.slim
+++ b/app/views/index/index.html.slim
@@ -30,11 +30,11 @@
     tbody
       - @attendance_records.each do |attendance_record|
         tr
-          td = attendance_record.start_time.strftime('%B %d, %Y')
-          td = formatted_time_with_break_time(attendance_record)
-          td = formatted_duration(attendance_record.end_time - attendance_record.start_time - attendance_record.break_time)
+          td[nowrap] = attendance_record.start_time.strftime('%B %d, %Y')
+          td[nowrap] = formatted_time_with_break_time(attendance_record)
+          td[nowrap] = formatted_duration(attendance_record.end_time - attendance_record.start_time - attendance_record.break_time)
           td = attendance_record.memo
-          td
+          td[nowrap]
             = link_to 'Edit', edit_attendance_record_path(attendance_record), class: 'waves-effect waves-teal btn-flat'
             = link_to 'Delete', attendance_record_path(attendance_record), method: 'delete', class: 'waves-effect waves-teal btn-flat'
 
