--- a/app/views/attendance_records/_form.html.slim
+++ b/app/views/attendance_records/_form.html.slim
@@ -23,4 +23,4 @@
     label[class="#{@attendance_record.memo.present? ? 'active' : ''}"] Memo
   
   .input-field
-    = f.submit 'Submit', class: 'waves-effect waves-light btn'
+    = f.submit 'Submit', class: 'waves-effect waves btn'
