--- a/app/views/attendance_records/edit.html.slim
+++ b/app/views/attendance_records/edit.html.slim
@@ -1,7 +1,7 @@
 .container
-  h3.u-mt_10 Edit record
+  h3.u-mt_50 Edit record
 
   .u-mt_50.u-mb_50
     == render 'form'
 
-  = link_to 'Back', root_path,  class: 'waves-effect waves-light btn brown darken-1'
+  = link_to 'Back', root_path,  class: 'waves-effect waves btn'
