--- a/app/views/attendance_records/new.html.slim
+++ b/app/views/attendance_records/new.html.slim
@@ -4,4 +4,4 @@
   .u-mt_50.u-mb_50
     == render 'form'
 
-  = link_to 'Back', root_path, class: 'waves-effect waves-light btn brown darken-1'
+  = link_to 'Back', root_path, class: 'waves-effect waves btn'
