--- a/app/views/index/index.html.slim
+++ b/app/views/index/index.html.slim
@@ -15,42 +15,44 @@
       = hidden_field_tag 'attendance_record[break_time]', '0'
       = hidden_field_tag 'attendance_record[end_time]', Time.now
     
-.container.u-pt_40
-  h3 Records
-  
-  table.highlight
-    thead
-      tr
-        th Date
-        th Work hours (Break time)
-        th Total time
-        th Memo
-        th Actions
+.container
+  section.section
+    h4 Records
     
-    tbody
-      - @attendance_records.each do |attendance_record|
+    table.highlight
+      thead
         tr
-          td[nowrap] = attendance_record.start_time.strftime('%B %d, %Y')
-          td[nowrap] = formatted_time_with_break_time(attendance_record)
-          td[nowrap] = formatted_duration(attendance_record.end_time - attendance_record.start_time - attendance_record.break_time)
-          td = attendance_record.memo
-          td[nowrap]
-            = link_to 'Edit', edit_attendance_record_path(attendance_record), class: 'waves-effect waves btn-flat'
-            = link_to 'Delete', attendance_record_path(attendance_record), method: 'delete', class: 'waves-effect waves-red btn-flat'
-
-  h3 Report
-  - if current_user.try!(:hourly_wage)
-    .row
-      .input-field.col.m4
-        input[type="text" value="#{formatted_duration(total_working_time(@attendance_records))}"]
-        label.active Total time
+          th Date
+          th Work hours (Break time)
+          th Total time
+          th Memo
+          th Actions
       
-      .input-field.col.m4
-        input#hourly-wage[type="text" value="#{current_user.hourly_wage}"]
-        label.active Hourly wage
+      tbody
+        - @attendance_records.each do |attendance_record|
+          tr
+            td[nowrap] = attendance_record.start_time.strftime('%B %d, %Y')
+            td[nowrap] = formatted_time_with_break_time(attendance_record)
+            td[nowrap] = formatted_duration(attendance_record.end_time - attendance_record.start_time - attendance_record.break_time)
+            td = attendance_record.memo
+            td[nowrap]
+              = link_to 'Edit', edit_attendance_record_path(attendance_record), class: 'waves-effect waves btn-flat'
+              = link_to 'Delete', attendance_record_path(attendance_record), method: 'delete', class: 'waves-effect waves-red btn-flat'
+
+  section.section
+    h4 Report
+    - if current_user.try!(:hourly_wage)
+      .row
+        .input-field.col.m4
+          input[type="text" value="#{formatted_duration(total_working_time(@attendance_records))}"]
+          label.active Total time
         
-      .input-field.col.m4
-        input#monthly-salary[type="text" value="#{(total_working_time(@attendance_records) / 60 / 60 * current_user.hourly_wage).to_i}"]
-        label.active Monthly salary (calculated automatically)
-  - else
-    p Nothing to show
+        .input-field.col.m4
+          input#hourly-wage[type="text" value="#{current_user.hourly_wage}"]
+          label.active Hourly wage
+          
+        .input-field.col.m4
+          input#monthly-salary[type="text" value="#{(total_working_time(@attendance_records) / 60 / 60 * current_user.hourly_wage).to_i}"]
+          label.active Monthly salary (calculated automatically)
+    - else
+      p You have to set hourly wage first.
