Add link to download csv

--- a/app/views/index/index.html.slim
+++ b/app/views/index/index.html.slim
@@ -75,3 +75,5 @@
           label.active Monthly salary (calculated automatically)
     - else
       p You have to set hourly wage first.
+    
+    a.btn[href="/attendance_records/download.csv?year=#{@target_month.year}&month=#{@target_month.month}"] Download report as csv
