--- a/app/views/index/welcome.html.slim
+++ b/app/views/index/welcome.html.slim
@@ -19,7 +19,7 @@ html
           .row.center
             h1 Kint-i
           .row.center
-            h4 A modern managing working time tool
+            h4 A MANAJEMENT WORKTIME
           .row.center = link_to 'Sign in with Google', user_google_omniauth_authorize_path, class: 'btn-large waves-effect waves-light', id: 'login-button'
 
       
