--- a/app/views/index/index.html.slim
+++ b/app/views/index/index.html.slim
@@ -1,6 +1,6 @@
 .halign-wrapper.valign-wrapper.red.lighten-2[style="height: 400px"]
   .waiting-for-action-area.halign-wrapper[style="flex-direction: column"]
-    .time-area.u-mb_20 Work now !
+    .time-area.u-mb_20 Let's Work !
     button.start-button.waves-effect.waves-light.btn-large.red.lighten-3 Start
 
   .couting-area.center-align[style="display: none; width: 100%"]
