--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,6 +26,6 @@ html
     footer.page-footer.u-pt_0.u-mt_20
       .footer-copyright
         .container
-          span © 2017 Hiroaki KARASAWA
-          a.grey-text.text-lighten-4.right[href="https://github.com/siquare"] GitHub
+          span © 2019 Suwung Tandon
+          a.grey-text.text-lighten-4.right[href="https://suwungtandon.github.io"] GitHub
         
